# engram

./: .env.example  .gitattributes  .gitignore  .gitmodules  .workos-seed-state.json  CLAUDE.md  README.md  package.json  workos-seed.yml
config/: deployed-endpoints.json
context/: include.md
docs/: ADVERSARIAL.md  CF-REMEDIATION-ROADMAP.md  CHAOS-CASCADE.md  CHAOS-CASE1-VERDICT.md  CLI-REPL.md  CLOUD-RUST-REWIRE.md  CODEBASE-STATE.md  COMBINED-STACK-INTEGRATION.md  CONVERGENCE-WAVE.md  DESIGN.md  DIAGRAMS.md  DURABILITY-BAKEOFF.md  DURABILITY-ROADMAP.md  ENV-SURFACE-POLICY.md  FAFO-FINDINGS.md  HARDENING-LOG.md  INTROSPECTION.md  LIVE-INFRA-TEST.md  NODE-FIDELITY-SCALE-AUDIT.md  PLATFORM-ON-RUST.md  POST-CUTOVER-E2E.md  PREVIEW-FIX-PROOF.md  PRIOR-ART.md  PRODUCT.md  R2TAIL-REALCF.md  REALCF-VALIDATION.md  REPL-HOISTING-FIX.md  REPL-NORMALJS.md  REWRITE-OPTIONS.md  RLM-STRIPPED.md  RUST-1B-REGATE.md  RUST-FINAL-GATE.md  RUST-KERNEL-P1A.md  RUST-KERNEL-PLAN.md  RUST-MAXIMAL.md  SANDBOX-API.md  SCALE-1000s.md  SESSION-SUMMARY.md  STATE-OF-THE-ART.md  STRESS-LOAD-RESEARCH.md  (+22 more)
examples/: README.md  agent-loop.mjs
experiments/: .gitignore  RESEARCH.md  suite5.mjs
experiments/exp-4b/: .gitignore  Cargo.toml  entry.mjs  package-lock.json  package.json  test-client.mjs  wrangler.jsonc
experiments/exp-4b/src/: glue.js  lib.rs
experiments/js-floor/: Cargo.toml
experiments/js-floor/src/: main.rs
experiments/kernel-rust1b/: Cargo.toml  verify-rust1b.mjs  w4-restore.mjs  wrangler.jsonc
experiments/kernel-rust1b/src/: lib.rs
scripts/: beam-full-infra-test.sh  (+12 more)
(+506 files in other folders)
