[package]
name = "js-floor"
version = "0.1.0"
edition = "2021"

[dependencies]
rquickjs = { path = "/Users/umang/hub/zonko/montydyn/experiments/_src/rquickjs", default-features = false, features = ["std", "bindgen"] }

[[bin]]
name = "js-floor"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
